# checkin-viz

./: .env.sops  .gitignore  .replit  Dockerfile  Dockerfile.huey  Pipfile  README.md  age-keys.txt  convert-python  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.nix
.gitea/workflows/: test.yaml
scripts/: decrypt  encrypt  entrypoint  huey
src/: base_queries.py  cache_decorator.py  chart.py  green.py  helpers.py  main.py  models.py  mulligan.py  rule_sets.py  tasks.py  twilio_decorator.py
src/app/: dataFormatting.ts  getData.ts  globals.css  layout.tsx  page.tsx  selectWeek.ts
src/app/[weekNum]/: page.tsx
src/app/components/: Chart.tsx  LatestDate.tsx  WeekSelect.module.css  WeekSelect.tsx
src/sql/: get_challenge_score.sql
src/static/: details.css  layout.css  main.css
src/templates/: base.html  calc.html  challenger.html  checkin.html  create_challenge.html  details.html  green.html  index.html  magic.html  mulligan.html
