[tool.poetry]
name = "cgf-challenge"
version = "0.1.0"
description = ""
authors = ["Thomas Crescenzi <trescenzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
svgwrite = "*"
flask = "*"
gunicorn = "*"
cairosvg = "*"
psycopg = {extras = ["binary"], version = "*"}
python-dotenv = "*"
pytz = "*"
flask-cors = "^4.0.1"
twilio = "^9.2.3"
huey = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
